--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=ecom-application
 server.port = 9090
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecomdb?options=-c%20TimeZone=Asia/Kolkata
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.info.enabled=true
